tests/fixtures/positive/code-style/ProhibitSuppressWarnings_CommentWithSeparatedNOPMD.cls
// Valid: Normal comment that happens to contain the letters NOPMD but separated
public class Example6 {
    public void method() {
        // No PMD warnings in this method
        // N O P M D are letters
        int value = 42;
    }
}

