tests/fixtures/negative/code-style/ProhibitSuppressWarnings_NOPMD_NoSpace.cls
// Violation: NOPMD comment without space before
public class Example10 {
    public void method() {
        int unused = 42; //NOPMD
    }
}

